--- a/index.html
+++ b/index.html
@@ -4,55 +4,69 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Портфолио кейсов</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --bg-color: #0d1117;
+      --card-bg: #161b22;
+      --accent: #0078ff;
+      --text-color: #ffffff;
+      --subtext-color: #cccccc;
+    }
     body {
       margin: 0;
-      font-family: "Inter", sans-serif;
-      background: #0d1117;
-      color: #fff;
+      padding: 20px;
+      font-family: "Montserrat", sans-serif;
+      background: var(--bg-color);
+      color: var(--text-color);
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
     }
     .swiper {
-      width: 90%;
-      max-width: 400px;
-      height: 90vh;
+      width: 100%;
+      max-width: 500px;
+      height: auto;
     }
     .swiper-slide {
-      background: #161b22;
+      background: var(--card-bg);
       border-radius: 20px;
       padding: 20px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: space-between;
+      transition: transform 0.3s ease;
+    }
+    .swiper-slide:hover {
+      transform: translateY(-5px);
     }
     .swiper-slide img {
       width: 100%;
-      height: 220px;
+      height: 250px;
       object-fit: cover;
       border-radius: 16px;
       margin-bottom: 15px;
     }
     h3 {
-      font-size: 20px;
-      margin: 10px 0;
+      font-size: 22px;
+      margin: 10px 0 5px 0;
       text-align: center;
     }
     p {
-      font-size: 14px;
-      color: #ccc;
+      font-size: 15px;
+      color: var(--subtext-color);
       text-align: center;
-      margin-bottom: 20px;
+      margin: 0 0 15px 0;
     }
     a {
-      background: #0078ff;
-      color: white;
+      background: var(--accent);
+      color: #fff;
       text-decoration: none;
       padding: 10px 20px;
       border-radius: 8px;
@@ -62,7 +76,7 @@
       background: #005fcc;
     }
     .swiper-pagination-bullet {
-      background: #fff !important;
+      background: var(--subtext-color) !important;
     }
   </style>
 </head>
@@ -72,6 +86,22 @@
     <div class="swiper-pagination"></div>
   </div>
   <script>
+    // Apply Telegram theme if available (light/dark)
+    function applyTelegramTheme() {
+      const tg = window.Telegram?.WebApp;
+      if (tg) {
+        const theme = tg.themeParams;
+        if (theme) {
+          const root = document.documentElement.style;
+          if (theme.bg_color) root.setProperty('--bg-color', '#' + theme.bg_color);
+          if (theme.secondary_bg_color) root.setProperty('--card-bg', '#' + theme.secondary_bg_color);
+          if (theme.button_color) root.setProperty('--accent', '#' + theme.button_color);
+          if (theme.text_color) root.setProperty('--text-color', '#' + theme.text_color);
+          if (theme.hint_color) root.setProperty('--subtext-color', '#' + theme.hint_color);
+        }
+      }
+    }
+    applyTelegramTheme();
     const cases = [
       {
         title: "Лендинг для стартапа",
@@ -95,7 +125,6 @@
     const container = document.getElementById("casesContainer");
     container.innerHTML = cases.map(c => `
       <div class="swiper-slide">
-<!-- build trigger -->
         <img src="${c.image}" alt="${c.title}">
         <h3>${c.title}</h3>
         <p>${c.description}</p>
@@ -105,9 +134,7 @@
     new Swiper('.swiper', {
       direction: 'horizontal',
       loop: true,
-      pagination: {
-        el: '.swiper-pagination',
-      },
+      pagination: { el: '.swiper-pagination' },
     });
   </script>
 </body>
